@@ -158,7 +158,7 @@ sub new {
   }
 
   $self->{dispatcher} = $log;
-  $self->{prefix} = $arg->{prefix} || $arg->{list_name};
+  $self->{prefix} = $arg->{prefix};
 
   $self->{debug}  = exists $arg->{debug}
                   ? $arg->{debug}
@@ -222,11 +222,7 @@ sub log {
     $message    = @flogged > 1 ? $self->_join(\@flogged) : $flogged[0];
 
     my $prefix = $arg->{prefix};
-
-    # XXX: ELIMINATE THIS -- rjbs, 2010-03-08
-    if (! defined $prefix and my $obs_prefix = $self->get_prefix) {
-      $prefix = "$obs_prefix: ";
-    }
+    $prefix = $self->get_prefix if ! defined $prefix;
 
     if (defined $prefix) {
       if (_CODELIKE( $prefix )) {
