@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          remove obsolete "list_name" alias to prefix
+          object-level prefix no longer automatically ends in ": "
 
 1.100681  2010-03-09 23:02:11 America/New_York
           rerelease with a tarball that isn't totally insane
